--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="hero-right reveal">
           <div class="photo-container glass-effect">
-            <img src="fotoku2.jpg" alt="Foto Ragil Ridho Saputra" />
+            <img src="foto_formal.jpg" alt="Foto Ragil Ridho Saputra" />
           </div>
         </div>
       </header>
